@@ -123,7 +123,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="tab">
+     <widget class="QWidget" name="tab_r">
       <attribute name="title">
        <string>R/lme4</string>
       </attribute>
